use new file selection code. (bst_update_can_operate):
Sat May 10 15:50:04 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: use new file selection code.
	(bst_update_can_operate):
	(bst_update_can_operate_unqueue): support can_operate updates
	on just BstItemView objects.

	* beast-gtk/bstfiledialog.[hc]: reimplementation of the file selection
	code. we now use a GxkDialog as toplevel, reuse GtkFileSelection
	widgets by reparenting them. Added a seperate BST_SAMPLE_PATH
	browser for fast loading of samples, and special cased the various
	loading/saving applications beast has.

	* beast-gtk/bstitemview.[hc]: use new child-list-wrapper code to
	maintain container children in a tree store. moved item_type field
	from instance to class and changed derived widgets. wrap item store
	into a sortable model, adapt code which relied on model specifics.

	* beast-gtk/bsttrackview.[hc]: fixups due to BstItemView changes, added
	popup dialog for synth selection cell. adapted code to using a sortable
	model view BstItemView.

	* beast-gtk/*.c: fix code duplicating signal disconnections
	using the "any_signal" keyword, since "any_signal" will disconnect
	all existing connections.

	* beast-gtk/*.[hc]: renamed BST_DVL_EXT to BST_DBG_EXT as
	"debug-extensions" is a more apropriate name since it enables unusual
	and harmfull behaviour that's only usefull for debugging purposes.

	* beast-gtk/bstutils.c: allow title setting without proxy for
	bst_window_sync_title_to_proxy().

	* beast-gtk/bstwaveview.[hc]: support new wave seleciton dialog,
	loading of samples from BST_SAMPLE_PATH and changing of editability.

	* beast-gtk/bsttracksynthdialog.[hc]: new dialog, offering an item
	list from a BseProxySeq, and loaded waves. these are the items
	selectable as synth input for a BseTrack.

	* beast-gtk/bsttreestores.[hc]: implementations of GtkTreeStores for
	proxy lists, proxy children and file crawler results.

	* beast-gtk/bstwavedialog.[hc]: files removed, purpose has been taken


--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -42,10 +42,10 @@ beast_headers = $(strip \
 	bstprocbrowser.h	bstqsampler.h	bstpreferences.h	bstprocedure.h	\
 	bstrackeditor.h		bstrackitem.h	bstracktable.h		bstradiotools.h	\
 	bstsnetrouter.h		bstsplash.h	bsttrackview.h		bstsupershell.h	\
-	bstusermessage.h	bstutils.h	bstwavedialog.h		bstwaveeditor.h	\
+	bstusermessage.h	bstdial.h	bsttracksynthdialog.h	bstwaveeditor.h	\
 	bstwavereposhell.h	bstwaveview.h	bstsongshell.h		bstxkb.h	\
 	bstzoomedwindow.h	glewidgets.h	bsttrackrollctrl.h	bstxframe.h	\
-	bstcatalog.h		bstdial.h			\
+	bstcatalog.h				bsttreestores.h		bstutils.h	\
 	bstmarshal.h bstdefs.h \
 )
 # BEAST c sources to build the program from
@@ -60,10 +60,10 @@ beast_sources = $(strip \
 	bstprocbrowser.c	bstqsampler.c	bstpreferences.c	bstprocedure.c	\
 	bstrackeditor.c		bstrackitem.c	bstracktable.c		bstradiotools.c	\
 	bstsnetrouter.c		bstsplash.c	bsttrackview.c		bstsupershell.c	\
-	bstusermessage.c	bstutils.c	bstwavedialog.c		bstwaveeditor.c	\
+	bstusermessage.c	bstdial.c	bsttracksynthdialog.c	bstwaveeditor.c	\
 	bstwavereposhell.c	bstwaveview.c	bstsongshell.c		bstxkb.c	\
 	bstzoomedwindow.c	glewidgets.c	bsttrackrollctrl.c	bstxframe.c	\
-	bstcatalog.c		bstdial.c			\
+	bstcatalog.c				bsttreestores.c		bstutils.c	\
 	$(PROFILE_SOURCE) \
 )
 # BEAST sources that get included (don't have own .lo rules)
