supply @NOTDVLBUILD@ Makefile substitution and IF_NOTDVLBUILD automake
Sun May 11 04:36:05 2003  Tim Janik  <timj@gtk.org>

        * configure.in: supply @NOTDVLBUILD@ Makefile substitution and
        IF_NOTDVLBUILD automake conditional.

        * beast-gtk/Makefile.am: fixup dependancies (automake manages to
        forget about previous values if += is used).

        * beast-gtk/bsttrackview.c: auto popup synth selection dialog
        for Synth cell renderer editing.

        * beast-gtk/gxk/gxkcellrendererpopup.[hc]: added auto-popup proeprty
        to automatically popup custom dialog when edits start.

        * beast-gtk/gxk/gxkutils.c: support auto popups.

svn path=/trunk/; revision=1079

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -151,7 +151,7 @@ stamp-ckeycheck: @DVLBUILD@ $(beast_sources) $(beast_extra_sources)
 	     --tmplkey '  { CKEY (%s),\t\t"Name",\n  BST_STOCK_,\t\t\t\t"",\n    "tip", NULL,\n  },\n' \
 	     --needkeys $(beast_sources) $(beast_extra_sources)
 	touch $@
-beast_DEPENDENCIES += stamp-ckeycheck
+beast: stamp-ckeycheck
 
 debug_key_globs = $(top_srcdir)/beast-gtk/*.[hc] $(top_srcdir)/bse/*.[hc] $(top_srcdir)/sfi/*.[hc]
 bstdebugkeys.defs: @DVLBUILD@ $(debug_key_globs)
