added test program for ogg/vorbis file cutting.
Tue May 20 17:46:12 2003  Tim Janik  <timj@gtk.org>

        * tests/cutvorbis.c: added test program for ogg/vorbis file cutting.

        * tests/: new directory to accumulate BSE related test programs.

svn path=/trunk/; revision=1096

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -3,7 +3,7 @@
 #
 ## Makefile.am for BSE
 
-SUBDIRS = icons zintern
+SUBDIRS = icons zintern . tests
 
 # need -I$(top_srcdir) for <bse/gsldefs.h>
 # need -I$(top_builddir) for <sfi/sficonfig.h>
