moved here from bsemagictest.c.
Tue May 20 18:39:03 2003  Tim Janik  <timj@gtk.org>

        * tests/magictest.c: moved here from bsemagictest.c.

        * tests/mathtests.c: moved here from gsltests.c.

        * tests/testfft.c: moved here from gslffttest.c.

        * tests/testwavechunk.c: moved here from gslwchunk.c.

        * tests/Makefile.am: added testwavechunk testfft to TESTS so
        make check runs these automatically.

        * removed: bsemagictest.c, gsltests.c, gslffttest.c and gslwchunk.c.

svn path=/trunk/; revision=1097

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -297,18 +297,16 @@ include gslmakefile.inc
 #
 # other programs, we want to compile
 #
-noinst_PROGRAMS = bsequery bseautodoc bsemagic bseinfo bseprocidl $(GSL_NOINST_PROGS)
+noinst_PROGRAMS = bsequery bseautodoc bseinfo bseprocidl
 # source files
 bseprocidl_SOURCES = bseprocidl.cc
 bsequery_SOURCES = bsequery.c
 bseautodoc_SOURCES = bseautodoc.c
-bsemagic_SOURCES = bsemagictest.c
 bseinfo_SOURCES = bseinfo.c
 # link programs against BSE
 progs_LDADD = libbse.la $(top_builddir)/sfi/libsfi.la
 bseprocidl_LDADD = $(progs_LDADD)
 bsequery_LDADD = $(progs_LDADD)
 bseautodoc_LDADD = $(progs_LDADD)
-bsemagic_LDADD = $(progs_LDADD)
 bseinfo_LDADD = $(progs_LDADD)
 
