BseDataPocket and BsePart. restoring BseWave from undo only works
Fri May 30 18:55:52 2003  Tim Janik  <timj@gtk.org>

	* implemented undo for BSE. We've got unlimited undo/redo for most
	functions now, undo is still missing out for: BseDataPocket and
	BsePart. restoring BseWave from undo only works partially.

	* bsewaverepo.proc: made load-file() and remove-wave() undo aware.

	* bseproject.proc: made create-song(), create-midi-synth(), play(),
	create-csynth(), remove-snet(), activate() and start-playback() undo
	aware. renamed ensure-wave-repo() to get-wave-repo(). added undo(),
	redo(), undo-depth(), redo-depth() and clear-undo().
	made restore-from-file() clear undo stack, because we can't maintain
	undo across merging.

	* bsesnet.proc: made create-source() and remove-source() undo aware.

	* bsesong.proc: made create-part(), remove-part(), create-track() and
	remove-track() undo aware.

	* bsesource.proc: made set-input-by-id(), unset-input-by-id(),
	set-input(), unset-input(), clear-inputs() and clear-outputs() undo
	aware. added undo-aware set-pos() to set ::pos-x and ::pos-y.

	* bsetrack.proc: changed procedures to use part link IDs.
	made insert-part(), remove-tick() and remove-link() undo aware.

	* bseitem.proc: added group-undo() and ungroup-undo() procedures for
	BSE clients to request undo grouping as well. internally we don#t open
	up actual undo groups for this, that could mess up internal state.
	instead, if group-undo() was called, everytime we're closing an undo
	group internally, we merge it with a previously queued undo group.

	* bsewaveosc.[hc]: fixed up cross links and signal reemissions.

	* bsetype.[hc]: added BSE_TYPE_PACKED_POINTER which is an undo
	implementation specific string type.

	* bsestorage.[hc]: restoring items generally does not queue undo/redo
	steps. added function to save an object entirely to memory.

	* bsetrack.[hc]: added IDs to part links.

	* bsesource.[hc]: added bse_source_backup_ichannels_to_undo(),
	bse_source

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -60,7 +60,7 @@ bse_public_h_sources = $(strip \
 	bsesubsynth.h		bsesuper.h		bsetrack.h			bsetype.h \
 	bseutils.h		bsemidivoice.h		bsewave.h			bsewaveosc.h \
 	bsecsynth.h		bsewaverepo.h		bseladspamodule.h		bsepcmwriter.h \
-	bsecompat.h		\
+	bsecompat.h		bseundostack.h		\
 )
 # BSE header files that don't get installed
 bse_private_h_sources = $(strip \
@@ -84,7 +84,7 @@ bse_c_sources = $(strip \
 	bsesubsynth.c		bsesuper.c		bsetrack.c			bsetype.c \
 	bseutils.c		bsemidivoice.c		bsewave.c			bsewaveosc.c \
 	bsecsynth.c		bsewaverepo.c		bseladspamodule.c		bsepcmwriter.c \
-	bsecompat.c		\
+	bsecompat.c		bseundostack.c		\
 )
 # procedure sources
 bse_proc_sources = $(strip \
