add snet scripts to modules menu.
Tue Jun 17 04:32:34 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstsnetrouter.c (popup_entries): add snet scripts to
        modules menu.

        * shell/modules2grid.scm: new script to align modules within a
        synthesis network.

svn path=/trunk/; revision=1144

--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -36,5 +36,6 @@ script_DATA = $(public_scripts)
 public_scripts = $(strip	\
 	bse-scm-glue.boot	\
 	progressor-example.scm	\
+	modules2grid.scm	\
 )
 EXTRA_DIST += $(public_scripts) test.scm
