announce german paper and irc channel.
Fri Jul 11 03:09:42 2003  Tim Janik  <timj@gtk.org>

        * docs/site-news.texi: announce german paper and irc channel.

        * docs/site-navigation.xml:
        * docs/overview-de.texi: added german paper accompanying a talk
        for LinuxTag 2003.

svn path=/trunk/; revision=1176

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -12,3 +12,6 @@ EXTRA_DIST = ${texi_docs} ${extra_docs}
 
 site site-upgrade site-update site-preview site-update-con site-update-img site-update-nav:
 	$(MAKE) -C generated/ $(AM_MAKEFLAGS) $@
+
+overview-de.texi: linuxtag-2003.texi
+	recode latin1..utf8 <$< >$@
