--- a/bse/icons/Makefile.icons
+++ b/bse/icons/Makefile.icons
@@ -12,6 +12,7 @@ icon_list += mic.c
 icon_list += midi-in.c
 icon_list += midi-out.c
 icon_list += midiictrl.c
+icon_list += mono-synth.c
 icon_list += osc.c
 icon_list += outport.c
 icon_list += snet.c
