--- a/configure.in
+++ b/configure.in
@@ -344,29 +344,56 @@ AC_DEFUN(AC_BSE_SNDDEV_CHECK,
 	
     dnl OSS-Lite driver check
     AC_CHECK_HEADER(sys/soundcard.h, have_oss_header=yes, have_oss_header=no)
+    AC_ARG_ENABLE(osspcm,
+	[  --enable-pcm=DEVICE     force DEVICE as OSS PCM device name],
+	[AC_MSG_WARN([Ignoring detection of PCM device])],
+	[enable_osspcm=""])
+    AC_ARG_ENABLE([ossmidi],
+	[  --enable-midi=DEVICE    force DEVICE as OSS MIDI device name],
+	[AC_MSG_WARN([Ignoring detection of MIDI device])],
+	[enable_ossmidi=""])
+    AC_MSG_CHECKING([for available OSS sound devices])
     result=
-    AC_ARG_ENABLE([devdsp],
-	          [  --enable-devdsp         force enable /dev/dsp],
-                  [force_devdsp=yes; AC_MSG_WARN([Ignoring detection of /dev/dsp])],
-                  [force_devdsp=no])
-    if test x"${force_devdsp}" = "xyes" || test -c /dev/dsp ; then
-	bse_have_pcmdev=yes
-        AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CONF_OSS, "/dev/dsp")
-        result="$result""PCM:/dev/dsp "
+    dnl Figure PCM device
+    if test -n "$enable_osspcm" ; then
+	dev="$enable_osspcm"
     else
-        result="$result""PCM:none "
+	for dev in /dev/dsp /dev/sound \
+	    /dev/dsp0 /dev/dsp1 /dev/dsp2 /dev/dsp3 ; do
+	  if test -c $dev ; then
+	      break;
+	  else
+	      dev=""
+	  fi
+        done
     fi
-    AC_ARG_ENABLE([devmidi],
-	          [  --enable-devmidi        force enable /dev/midi],
-                  [force_midi=yes; AC_MSG_WARN([Ignoring detection of /dev/midi])],
-                  [force_midi=no])
-    if test $have_oss_header = yes && ( test x"${force_midi}" = "xyes" || test -c /dev/midi ) ; then
-        AC_DEFINE_UNQUOTED(BSE_MIDI_DEVICE_CONF_OSS, "/dev/midi")
-        result="$result""MIDI:/dev/midi "
+    if test -n "$dev" ; then
+	bse_have_pcmdev=yes
+	AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CONF_OSS, "$dev")
+	result="$result""PCM:$dev "
+    else
+	result="$result""PCM:none "
+    fi
+    dnl Figure MIDI device
+    if test -n "$enable_ossmidi" ; then
+        dev="$enable_ossmidi"
+    else
+	for dev in /dev/midi \
+	    /dev/midi0  /dev/midi1  /dev/midi2  /dev/midi3 \
+	    /dev/rmidi0 /dev/rmidi1 /dev/rmidi2 /dev/rmidi3 ; do
+	  if test -c $dev ; then
+	      break;
+	  else
+	      dev=""
+	  fi
+        done
+    fi
+    if test -n "$dev" ; then
+        AC_DEFINE_UNQUOTED(BSE_MIDI_DEVICE_CONF_OSS, "$dev")
+        result="$result""MIDI:$dev "
     else
         result="$result""MIDI:none "
     fi
-    AC_MSG_CHECKING([for available sound driver/devices])
     AC_MSG_RESULT($result)
 
     dnl Error out if there is no sound device at all
