added support for segment display in the canvas.
Tue Jul 29 14:00:37 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bsteventroll.[hc]: added support for segment
        display in the canvas.

        * beast-gtk/bsteventrollctrl.[hc]: implement alignment
        tool to align events to a given segment.

        * beast-gtk/bstpartdialog.c: add button and menu item
        to select event-alignment tool.

        * beast-gtk/gxk/gxkutils.c: disabled
        gxk_tree_selection_force_browse() for now, since it aparently
        triggers a segfaulting bug in the Gtk+-2.2.2 treeview.

svn path=/trunk/; revision=1218

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -8,6 +8,7 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	cdrom.xcf		\
 	clipboard.xcf		\
 	editor.xcf		\
+	event-control.xcf	\
 	knob.xcf		\
 	loopleft.xcf		\
 	mouse_tool.xcf		\
@@ -35,6 +36,7 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 
 STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_EDIT_TOOL			$(srcdir)/editor.png		\
+	STOCK_EVENT_CONTROL		$(srcdir)/event-control.png	\
 	STOCK_INFO			$(srcdir)/bulb.png		\
 	STOCK_INSTRUMENT		$(srcdir)/aguitar.png		\
 	STOCK_KNOB			$(srcdir)/knob.png		\
