add --module code generation option.
Wed Jul 30 05:17:56 2003  Tim Janik  <timj@gtk.org>

        * sfidl-options.[hc]*: add --module code generation option.

        * sfidl-parser.[hc]*: implement {I|J|O}Stream parsing.

        * sfidl.[hc]*: export   C code generator since it implements
        functionality needed by the other code generators (needs to be fixed).

        * sfidl-module.[hc]*: implement plugin module code generator.

        * sfitypes.h: introduce SfiString.

svn path=/trunk/; revision=1221

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -85,8 +85,8 @@ $(OBJECTS): sficonfig.h
 #
 noinst_PROGRAMS = sfidl testsfi
 # source files
-sfidl_SOURCES = sfidl.cc sfidl-namespace.cc sfidl-options.cc sfidl-parser.cc glib-extra.c
-EXTRA_DIST += sfidl-namespace.h sfidl-options.h sfidl-parser.h
+sfidl_SOURCES = sfidl.cc sfidl-namespace.cc sfidl-options.cc sfidl-parser.cc sfidl-module.cc glib-extra.c
+EXTRA_DIST += sfidl-namespace.h sfidl-options.h sfidl-parser.h sfidl-module.h
 progs_extra_sources += sfidl-namespace.h
 sfidl_LDADD = $(SFI_LIBS) -lm
 testsfi_SOURCES = testsfi.c
