implementation of a peak filter, and example effect implemented in C++.
Fri Aug 22 05:01:14 2003  Tim Janik  <timj@gtk.org>

        * examplepeakfilter.[hc]*: implementation of a peak filter, and example
        effect implemented in C++.

        * bsecxxmodule.[hc]*: implement Module, the C++ base class for engine
        modules. implement Bse::Effect, mostly a wrapper around BseSource
        functionality to allow effect implementations in C++.

        * bsecxxvalue.[hc]*: C++ GValue wrapper.

        * bsegenclosures.h: generated closure templates to allow signal
        connections in C++ code with many different signatures.

        * bsecxxclosure.[hc]*: implement base signal handler closure,
        and generation code for bsegenclosures.h.

        * bsecxxarg.[hc]*: implement function argument templates to be
        used by signal handler closures.

        * tests/testcxx.cc: new test program to perform cxx tests.

        * bsecxxbase.[hc]*: implement signal connections with type checking.
        implemented class functions to add i/o channels.

        * bsecxxutils.[hc]*: put out a message upon uncaught exceptions.
        added template and exception utilities. allow for better
        parameterization upon type registration.

        * bsesource.[hc]: allow GslClass caching in BseSourceClass.

        * bseexample.[hc]*: removed bad test code, there's a better example
        module now.

        * *.cc: use an anonymous namespace for local (static)
        functions/variables.

        * gslengine.[hc]: implement force-reset jobs to allow forcing
        reset of a module.

        * gslopmaster.[hc]: implement forced resetting of modules.

svn path=/trunk/; revision=1228

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -42,7 +42,7 @@ libbse_la_LIBADD = $(BSE_LIBS) -lm
 #
 # BSE header files for public installation (non-generated)
 bse_public_h_sources = $(strip \
-	bse.h	bsedefs.h	bseexports.h	bseconfig.h	ladspa.h \
+	bse.h	bsedefs.h	bseexports.h	bseconfig.h	ladspa.h	bsegenclosures.h \
 	\
 	bseamplifier.h		            		bsebiquadfilter.h		bsecategories.h \
 	bseconstant.h		bseconstvalues.h	bsecontainer.h			bsecontextmerger.h \
@@ -61,7 +61,8 @@ bse_public_h_sources = $(strip \
 	bseutils.h		bsemidivoice.h		bsewave.h			bsewaveosc.h \
 	bsecsynth.h		bsewaverepo.h		bseladspamodule.h		bsepcmwriter.h \
 	bsecompat.h		bseundostack.h		bsemonokeyboard.c		bsemididecoder.h \
-	bsecxxutils.h		bsecxxbase.h		bseexample.h			\
+	bsecxxvalue.h		bsecxxutils.h		bsecxxbase.h			bsecxxclosure.h \
+	bsecxxarg.h		bsecxxmodule.h		examplepeakfilter.h \
 )
 # BSE header files that don't get installed
 bse_private_h_sources = $(strip \
@@ -86,7 +87,8 @@ bse_c_sources = $(strip \
 	bseutils.c		bsemidivoice.c		bsewave.c			bsewaveosc.c \
 	bsecsynth.c		bsewaverepo.c		bseladspamodule.c		bsepcmwriter.c \
 	bsecompat.c		bseundostack.c		bsemonokeyboard.c		bsemididecoder.c \
-	bsecxxutils.cc		bsecxxbase.cc		bseexample.cc			\
+	bsecxxvalue.cc		bsecxxutils.cc		bsecxxbase.cc			bsecxxclosure.cc \
+	bsecxxarg.cc		bsecxxmodule.cc		examplepeakfilter.cc \
 )
 # procedure sources
 bse_proc_sources = $(strip \
