--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -9,15 +9,16 @@ INCLUDES += -I$(top_srcdir) -I$(top_builddir) $(SFI_CFLAGS)
 
 DEFS += -DG_LOG_DOMAIN=\"BSE-TEST\" # -DG_DISABLE_CONST_RETURNS
 
-
-TESTS = testwavechunk testfft
+TESTS = testfft testcxx testwavechunk
 progs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 testwavechunk_SOURCES = testwavechunk.c cxxdummy.cc
 testwavechunk_LDADD = $(progs_ldadd)
 testfft_SOURCES = testfft.c cxxdummy.cc
 testfft_LDADD = $(progs_ldadd)
+testcxx_SOURCES = testcxx.cc
+testcxx_LDADD = $(progs_ldadd)
 
-noinst_PROGRAMS = cutvorbis magictest mathtests $(TESTS)
+noinst_PROGRAMS = cutvorbis magictest mathtests $(TESTS) # testwavechunk
 cutvorbis_SOURCES = cutvorbis.c cxxdummy.cc
 cutvorbis_LDADD = $(progs_ldadd)
 magictest_SOURCES = magictest.c cxxdummy.cc
